# found

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  fly.toml  found_opengraph_image.acorn  memory.md  pyproject.toml
.github/workflows/: fly-deploy.yml  test.yml
community/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_recommendation.py  0003_savedcuratedlist.py
companies/: admin.py  business_categories.py  business_hours.py  cities.py  creation.py  filters.py  models.py  search.py  serializers.py  tests.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_company_needs_editorial_review.py  0003_ownershipmarker_company_ownership_markers.py  0004_cuisinetype_company_cuisine_types.py  0005_company_business_categories.py  0006_company_is_published.py  (+3 more)
config/: api_urls.py  settings.py
core/: admin.py  views.py
data/: companies_enriched.csv  puerto_rico_san_juan_import.csv
docs/: 0001-initial-project-implementation.md  2026-03-14-account-dashboard-business-summary.md  README.md  account-and-community-spec.md  architecture.md  deployment-status.md  deployment.md  development.md  project-plan.md
frontend/: .env.example  Dockerfile  fly.toml  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: factories.py  test_api_shapes.py
users/: admin.py  display_names.py  forms.py  managers.py  models.py  notifications.py  serializers.py  services.py  tests.py  urls.py  views.py
(+119 files in other folders)
